Correct horizontal scroll and table container in the BudgetCompoent

--- a/ferreteriacatelotti/client/src/App.css
+++ b/ferreteriacatelotti/client/src/App.css
@@ -16,6 +16,8 @@
   padding: 0;
   box-sizing: border-box;
   text-decoration: none;
+  max-width: 100%;
+ 
 }
 
 body {
@@ -35,11 +37,13 @@ main {
 }
 .component__container {
   width: 100%;
-  height: 100vh;
+  min-height: 100dvh; /* controlamos el overflow en pantallas medianas */
+ 
+  
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
 }
 .component__table__container {
   display: flex;
