--- a/ferreteriacatelotti/client/src/components/BudgetComponent/BudgetComponent.css
+++ b/ferreteriacatelotti/client/src/components/BudgetComponent/BudgetComponent.css
@@ -26,7 +26,7 @@
     background-color: var(--background2); */
 
     width: 50%;
-    max-height: 80vh; /* Ajustá según tu diseño */
+    /* Ajustá según tu diseño */
     overflow-y: auto;
     overflow-x: auto;
     display: flex;
