--- a/ferreteriacatelotti/client/src/components/ClientComponent/ClientComponent.css
+++ b/ferreteriacatelotti/client/src/components/ClientComponent/ClientComponent.css
@@ -14,7 +14,7 @@
   width: 50%;
   justify-content: center;
   align-items: center;
-  margin-top: 3rem;
+  margin-top: 1rem;
 }
 .clientcomponent__search-container {
   width: 100%;
