--- a/ferreteriacatelotti/client/src/components/ProductComponent/ProductComponent.css
+++ b/ferreteriacatelotti/client/src/components/ProductComponent/ProductComponent.css
@@ -25,6 +25,7 @@
   flex-direction: column;
   align-items: center;
   margin: 30px;
+  max-height: 65vh
   /* padding-bottom: 20px; */
 }
 
