--- a/ferreteriacatelotti/client/src/components/SideBar/SideBar.css
+++ b/ferreteriacatelotti/client/src/components/SideBar/SideBar.css
@@ -16,6 +16,12 @@
   
 }
 
+.layout-wrapper{
+  box-sizing: border-box;
+  max-width: 100%;
+  overflow-x: hidden;
+}
+
 .sidebar-expanded {
   width: 250px;
   background: var(--background2);
